--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,8 +6,9 @@
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
     "com.unity.ide.vscode": "1.2.4",
+    "com.unity.multiplayer.tools": "1.0.0-pre.2",
     "com.unity.netcode.adapter.utp": "1.0.0-pre.3",
-    "com.unity.netcode.gameobjects": "1.0.0-pre.3",
+    "com.unity.netcode.gameobjects": "file:c:/Workspace/com.unity.netcode.gameobjects/com.unity.netcode.gameobjects/",
     "com.unity.probuilder": "5.0.3",
     "com.unity.test-framework": "1.1.30",
     "com.unity.textmeshpro": "3.0.6",
